--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
